{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 238,
  "lineage": "067e4a49-4c93-4bf2-36d0-ee484ca0b45b",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005c3217d0b4947ef",
            "arn": "arn:aws:ec2:eu-central-1:566167302576:elastic-ip/eipalloc-005c3217d0b4947ef",
            "association_id": "eipassoc-0aa4160ab7bc10ef8",
            "domain": "vpc",
            "id": "eipalloc-005c3217d0b4947ef",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-02fae8b5ab2dcc935",
            "private_dns": "ip-10-0-1-110.eu-central-1.compute.internal",
            "private_ip": "10.0.1.110",
            "public_dns": "ec2-63-185-221-162.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.185.221.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "nat-eip-eu-central-1a"
            },
            "tags_all": {
              "name": "nat-eip-eu-central-1a"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcceb2b1bad15545",
            "arn": "arn:aws:ec2:eu-central-1:566167302576:elastic-ip/eipalloc-0bcceb2b1bad15545",
            "association_id": "eipassoc-0a1c938b3708aba7a",
            "domain": "vpc",
            "id": "eipalloc-0bcceb2b1bad15545",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0f8d1f83eddc78e1a",
            "private_dns": "ip-10-0-11-94.eu-central-1.compute.internal",
            "private_ip": "10.0.11.94",
            "public_dns": "ec2-63-177-116-76.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.177.116.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "name": "nat-eip-eu-central-1b"
            },
            "tags_all": {
              "name": "nat-eip-eu-central-1b"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:internet-gateway/igw-02319524b9873a327",
            "id": "igw-02319524b9873a327",
            "owner_id": "566167302576",
            "tags": {
              "Name": "main-gateway"
            },
            "tags_all": {
              "Name": "main-gateway"
            },
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005c3217d0b4947ef",
            "association_id": "eipassoc-0aa4160ab7bc10ef8",
            "connectivity_type": "public",
            "id": "nat-0e19c4a543b60e0a4",
            "network_interface_id": "eni-02fae8b5ab2dcc935",
            "private_ip": "10.0.1.110",
            "public_ip": "63.185.221.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08fac864ca92f0390",
            "tags": {
              "name": "nat-gateway-eu-central-1a"
            },
            "tags_all": {
              "name": "nat-gateway-eu-central-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bcceb2b1bad15545",
            "association_id": "eipassoc-0a1c938b3708aba7a",
            "connectivity_type": "public",
            "id": "nat-08e585a88258911bf",
            "network_interface_id": "eni-0f8d1f83eddc78e1a",
            "private_ip": "10.0.11.94",
            "public_ip": "63.177.116.76",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09dc95b02d64645d0",
            "tags": {
              "name": "nat-gateway-eu-central-1b"
            },
            "tags_all": {
              "name": "nat-gateway-eu-central-1b"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:route-table/rtb-02728315b49ed3bfc",
            "id": "rtb-02728315b49ed3bfc",
            "owner_id": "566167302576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "db route table - eu-central-1a"
            },
            "tags_all": {
              "Name": "db route table - eu-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:route-table/rtb-0c2cd8c2d41ab5731",
            "id": "rtb-0c2cd8c2d41ab5731",
            "owner_id": "566167302576",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "db route table - eu-central-1b"
            },
            "tags_all": {
              "Name": "db route table - eu-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:route-table/rtb-0eacb9a401eb1cab5",
            "id": "rtb-0eacb9a401eb1cab5",
            "owner_id": "566167302576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e19c4a543b60e0a4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:route-table/rtb-0b095bbe583d7470d",
            "id": "rtb-0b095bbe583d7470d",
            "owner_id": "566167302576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08e585a88258911bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:route-table/rtb-02c7878f0aaa73a3d",
            "id": "rtb-02c7878f0aaa73a3d",
            "owner_id": "566167302576",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02319524b9873a327",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c29ddf9b2822515",
            "route_table_id": "rtb-02728315b49ed3bfc",
            "subnet_id": "subnet-09a2a496c38ff9fb0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f89d5c96652ef3c",
            "route_table_id": "rtb-0c2cd8c2d41ab5731",
            "subnet_id": "subnet-05592c88b70660812"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_route_table.db",
            "module.network.aws_subnet.db",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0571e095b0e0786e3",
            "route_table_id": "rtb-0eacb9a401eb1cab5",
            "subnet_id": "subnet-02cfa0ea2ed7d58b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb47e25102e00c06",
            "route_table_id": "rtb-0b095bbe583d7470d",
            "subnet_id": "subnet-068511fa0854d290c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "eu-central-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07fee4737e83767e4",
            "route_table_id": "rtb-02c7878f0aaa73a3d",
            "subnet_id": "subnet-08fac864ca92f0390"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "eu-central-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069141f26c01ebed1",
            "route_table_id": "rtb-02c7878f0aaa73a3d",
            "subnet_id": "subnet-09dc95b02d64645d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.gw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db subnet-5",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:subnet/subnet-09a2a496c38ff9fb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a2a496c38ff9fb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566167302576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "db-subnet-db subnet-5"
            },
            "tags_all": {
              "name": "db-subnet-db subnet-5"
            },
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "db subnet-6",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:subnet/subnet-05592c88b70660812",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05592c88b70660812",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566167302576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "db-subnet-db subnet-6"
            },
            "tags_all": {
              "name": "db-subnet-db subnet-6"
            },
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:subnet/subnet-02cfa0ea2ed7d58b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cfa0ea2ed7d58b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566167302576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/nutri-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "name": "private-subnet-private subnet-3"
            },
            "tags_all": {
              "kubernetes.io/cluster/nutri-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "name": "private-subnet-private subnet-3"
            },
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "private subnet-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:subnet/subnet-068511fa0854d290c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068511fa0854d290c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566167302576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/nutri-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "name": "private-subnet-private subnet-4"
            },
            "tags_all": {
              "kubernetes.io/cluster/nutri-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "name": "private-subnet-private subnet-4"
            },
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:subnet/subnet-08fac864ca92f0390",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fac864ca92f0390",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566167302576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/nutri-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "name": "public-subnet-public subnet-1"
            },
            "tags_all": {
              "kubernetes.io/cluster/nutri-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "name": "public-subnet-public subnet-1"
            },
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "public subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:subnet/subnet-09dc95b02d64645d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dc95b02d64645d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566167302576",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "kubernetes.io/cluster/nutri-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "name": "public-subnet-public subnet-2"
            },
            "tags_all": {
              "kubernetes.io/cluster/nutri-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1",
              "name": "public-subnet-public subnet-2"
            },
            "vpc_id": "vpc-01b58459fb2e33c4d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:566167302576:vpc/vpc-01b58459fb2e33c4d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a6bdc9a1e0cda8ce",
            "default_route_table_id": "rtb-001bd7b0c4cb8df79",
            "default_security_group_id": "sg-03f28ae4c6c5642a8",
            "dhcp_options_id": "dopt-0483f6c34a0d98dc2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b58459fb2e33c4d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-001bd7b0c4cb8df79",
            "owner_id": "566167302576"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}